--- a/src/Components/EditTask/EditTask.css
+++ b/src/Components/EditTask/EditTask.css
@@ -4,8 +4,6 @@
     height: 35px;
     text-align: center;
     background-color:rgb(0,0,0,0.9) !important;
+    color:white !important;
   }
 
-  .button-style :hover {
-    background-color: #9e1f1f !important ;
-  }
