--- a/src/App.css
+++ b/src/App.css
@@ -4,11 +4,15 @@
 
 
 
-   /* .App{
-     text-align: center;
-   }
+   .App{
+     display: flex;
+     flex-direction: column;
+     justify-content: center;
+     align-items: center;
 
-   */
+   } 
+
+  
 
 
   
